force-app/main/default/objects/Donation__c/fields/Donor_Email__c.field-meta.xml
<CustomField>
    <fullName>Donor_Email__c</fullName>
    <formula>Donor__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Email</label>
    <type>Text</type>
</CustomField>