force-app/main/default/objects/Donation__c/fields/Grant_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Grant_Period_End__c</fullName>
    <label>Grant Period End</label>
    <type>Date</type>
</CustomField>