force-app/main/default/objects/Donation__c/fields/Grant_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Grant_Period_Start__c</fullName>
    <label>Grant Period Start</label>
    <type>Date</type>
</CustomField>