force-app/main/default/objects/Donation__c/fields/Grant_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Grant_Reference_Number__c</fullName>
    <label>Grant Reference Number</label>
    <type>TextArea</type>
</CustomField>