force-app/main/default/objects/Donation__c/fields/Grant_Reference_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Grant_Reference_Number_c__c</fullName>
    <displayFormat>GR-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Grant Reference Number</label>
    <type>AutoNumber</type>
</CustomField>