force-app/main/default/objects/Donation__c/recordTypes/Grant_Donation.recordType-meta.xml
<RecordType>
    <fullName>Grant_Donation</fullName>
    <active>true</active>
    <description>For institutional grants and large donations</description>
    <label>Grant Donation</label>
</RecordType>