force-app/main/default/objects/Donation__c/recordTypes/Regular_Donation.recordType-meta.xml
<RecordType>
    <fullName>Regular_Donation</fullName>
    <active>true</active>
    <description>For standard individual donation</description>
    <label>Regular Donation</label>
</RecordType>