force-app/main/default/objects/Donation__c/validationRules/Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Donation amount must be greater than zero.</errorMessage>
</ValidationRule>