force-app/main/default/objects/Donation__c/validationRules/Email_Required_Online.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required_Online</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Payment_Method__c, &quot;Online&quot;),
  ISBLANK(Donor__r.Email__c)
)</errorConditionFormula>
    <errorDisplayField>Payment_Method__c</errorDisplayField>
    <errorMessage>Email is required for online donations</errorMessage>
</ValidationRule>