force-app/main/default/objects/Donation__c/validationRules/No_Future_Donations.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Donations</fullName>
    <active>true</active>
    <errorConditionFormula>Donation_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Donation_Date__c</errorDisplayField>
    <errorMessage>Donation date cannot be in the future</errorMessage>
</ValidationRule>